---
source: src/parser/pparser.rs
expression: result
input_file: src/parser/parser_inputs/fn_def.pr
---
code_str_repr:
  - "fn add(a i64, b i64) i64"
  - "return [a + b];"
  - ""
  - "fn add(a i64, b i64) i64"
  - "return [a + b];"
  - ""
  - fn do_nothing() void
  - ""
  - fn do_nothing_() void
  - return 1;
  - fn prototype() i64
  - ""
  - fn returns_nothing() void
  - return;
  - ""
  - ""
lexer_errors: []
parser_errors: []
parse_warning: []

